--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             margin: 0;
             padding: 0;
             width: 100%;
+            background-color:black;
         }
 
         body {
@@ -24,6 +25,7 @@
             text-align: center;
             display: table-cell;
             vertical-align: middle;
+            color:lightgray;
         }
         .p1 > .c1 {
             font-family:'Roboto', sans-serif;
