--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             width: 100%;
-            background-color:black;
+            background-color:white;
         }
 
         body {
@@ -25,11 +25,11 @@
             text-align: center;
             display: table-cell;
             vertical-align: middle;
-            color:lightgray;
         }
         .p1 > .c1 {
             font-family:'Roboto', sans-serif;
             font-size:300%;
+            color:black;
         }
 
         .p1 > .c2 {
@@ -37,6 +37,7 @@
             font-family:'Roboto', sans-serif;
             font-size:100%;
             line-height: 2;
+            color:gray;
         }
 
         </style>
