--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <style>
 
         @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+		@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;600&display=swap');
 
         html, body {
             height: 100%;
@@ -25,9 +26,10 @@
             text-align: center;
             display: table-cell;
             vertical-align: middle;
+
         }
         .p1 > .c1 {
-            font-family:'Roboto', sans-serif;
+            font-family:'Roboto Slab', serif;
             font-size:300%;
             color:black;
         }
