--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
     <head>
         <title>Ground State Technologies</title>
         <style>
-
         @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-		@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;600&display=swap');
-
+	@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;600&display=swap');
         html, body {
             height: 100%;
             margin: 0;
@@ -14,11 +12,9 @@
             width: 100%;
             background-color:white;
         }
-
         body {
             display: table;
         }
-
         .p1 {
             width: 100%;
             height: 100%;
@@ -26,29 +22,33 @@
             text-align: center;
             display: table-cell;
             vertical-align: middle;
-
         }
         .p1 > .c1 {
             font-family:'Roboto Slab', serif;
             font-size:300%;
             color:black;
         }
-
         .p1 > .c2 {
             padding-top: 80px;
             font-family:'Roboto', sans-serif;
             font-size:100%;
             line-height: 2;
-            color:gray;
-        }
+            color:gray;        }
 
         </style>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-285X35S0B3"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-285X35S0B3');
+	</script>
     </head>
     <body>
       <section class="p1">
           <div class="c1">Ground State Technologies</div>
           <div class="c2">Mountain View, CA </br> contact@groundstate.tech </div>
       </section>
-
     </body>
 </html>
