--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             font-family:'Roboto', sans-serif;
             font-size:100%;
             line-height: 2;
-            color:gray;        }
-
+            color:gray;        
+	}
         </style>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-285X35S0B3"></script>
 	<script>
